--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "library-front",
   "version": "0.1.0",
+  "homepage": "https://VictorFil67.github.io/library-front",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,8 +13,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+ "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
